Fix feed spacing

--- a/src/app/modules/notices/template/feed-notice.component.ng.scss
+++ b/src/app/modules/notices/template/feed-notice.component.ng.scss
@@ -32,7 +32,7 @@ $topbarHeight: 75px;
   }
 
   .m-feedNotice__left {
-    width: $activitySpacingLeft--feed;
+    width: $spacing16;
 
     i {
       margin-top: calc($spacing1 / 2);
